--- a/web/add-student.xhtml
+++ b/web/add-student.xhtml
@@ -4,42 +4,42 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/templates/main_template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">  
-    <ui:define name="title">Add employee</ui:define>
+    <ui:define name="title">Add student</ui:define>
 
     <ui:define name="content">
         <h:form>
             <h:panelGrid columns="2">
                 <f:facet name="header">
                     <h:panelGroup style="display: block; text-align: center;">
-                        <h:outputText value="Unos profesora" style="font-size: 20px;"/>
+                        <h:outputText value="Unos studenta" style="font-size: 20px;"/>
                     </h:panelGroup>
                 </f:facet>
                 <h:outputLabel for="nameInput" value="Ime: "/>
-                <h:inputText id="nameInput" value="#{employeeBean.employee.person.name}"/>
+                <h:inputText id="nameInput" value="#{studentBean.student.person.name}"/>
 
                 <h:outputLabel for="surnameInput" value="Prezime: "/>
-                <h:inputText id="surnameInput" value="#{employeeBean.employee.person.surname}"/>
+                <h:inputText id="surnameInput" value="#{studentBean.student.person.surname}"/>
 
-                <h:outputLabel for="titleDropbox" value="Titula: "/>
-                <p:selectOneMenu id="titleDropbox" value="#{employeeBean.employee.title}">
-                    <f:converter converterId="titleConverter"/>
-                    <f:selectItems value="#{dropboxesDataBean.titles}"/>
-                </p:selectOneMenu>
-
-                <h:outputLabel for="departmentDropbox" value="Katedra: "/>
-                <p:selectOneMenu id="departmentDropbox" value="#{employeeBean.employee.department}">
-                    <f:converter converterId="departmentConverter"/>
-                    <f:selectItems value="#{dropboxesDataBean.departments}"/>
-                </p:selectOneMenu>
+                <h:outputLabel for="indexNoInput" value="Broj indeksa: "/>
+                <h:inputText id="indexNoInput" value="#{studentBean.student.indexNo}"/>
 
                 <h:outputLabel for="emailInput" value="e-mail: "/>
-                <h:inputText id="emailInput" value="#{employeeBean.employee.person.email}"/>
+                <h:inputText id="emailInput" value="#{studentBean.student.person.email}"/>
 
                 <h:outputLabel for="usernameInput" value="Korisničko ime: "/>
-                <h:inputText id="usernameInput" value="#{employeeBean.employee.person.username}"/>
+                <h:inputText id="usernameInput" value="#{studentBean.student.person.username}"/>
 
                 <h:outputLabel for="passwordInput" value="Korisnička šifra: "/>
-                <h:inputText id="passwordInput" value="#{employeeBean.employee.person.password}"/>
+                <h:inputText id="passwordInput" value="#{studentBean.student.person.password}"/>
+
+                <h:outputLabel for="jmbgInput" value="JMBG: "/>
+                <h:inputText id="jmbgInput" value="#{studentBean.student.jmbg}"/>
+
+                <h:outputLabel for="courseDropbox" value="Smer: "/>
+                <p:selectOneMenu id="courseDropbox" value="#{studentBean.student.course}">
+                    <f:converter converterId="courseConverter"/>
+                    <f:selectItems value="#{dropboxesDataBean.courses}"/>
+                </p:selectOneMenu>
 
                 <f:facet name="footer">
                     <h:panelGroup style="display: block; text-align: center;">
