--- a/web/first-page.xhtml
+++ b/web/first-page.xhtml
@@ -4,5 +4,5 @@
                 template="/templates/main_template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="title">First page</ui:define>
-    <ui:define name="content">Welcome <h:outputText rendered="#{loggedInUserBean.loggedInEmployee != null}" value="#{loggedInUserBean.loggedInEmployee.person.name}"/><h:outputText rendered="#{loggedInUserBean.loggedInStudent != null}" value="#{loggedInUserBean.loggedInStudent.person.name}"/></ui:define>
+    <ui:define name="content">Welcome <h:outputText  value="#{loggedInUserBean.loggedInPerson[loggedInUserBean.personIdentifier].name}"/></ui:define>
 </ui:composition>
