Uradjena forma za dodavanje zavrsnog rada i deo operacija sa bazom

--- a/web/add-employee.xhtml
+++ b/web/add-employee.xhtml
@@ -11,7 +11,7 @@
     </ui:define>
 
     <ui:define name="content">
-        <h:form role="form" styleClass="col-md-12 form-horizontal">
+        <h:form styleClass="col-md-12 form-horizontal">
 
            
               
