--- a/web/add-student.xhtml
+++ b/web/add-student.xhtml
@@ -12,7 +12,7 @@
 
     <ui:define name="content">
 
-        <h:form role="form" styleClass="col-md-12 form-horizontal">
+        <h:form styleClass="col-md-12 form-horizontal">
 
             <div class="form-group">
                 <h:outputLabel for="nameInput" styleClass="col-md-2 control-label" value="Ime: "/>
