--- a/web/send-final-version.xhtml
+++ b/web/send-final-version.xhtml
@@ -1,16 +1,32 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="/templates/main_template.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">  
+    <ui:define name="title">Send final version</ui:define>
+
+    <ui:define name="content">
+        <h:form enctype="multipart/form-data">
+            <div class="form-group">
+                <h:outputLabel for="titleInput" styleClass="col-md-2 control-label" value="Naslov: "/>
+                <div class="col-md-10">
+                    <h:inputText id="nameInput" styleClass="form-control" value="#{submitFinalPaper.title}"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <h:outputLabel for="subjectDropbox"  styleClass="col-md-2 control-label" value="Predmet: "/>
+                <div class="col-md-10">
+                    <h:selectOneMenu id="subjectDropbox"  styleClass="form-control" value="#{submitFinalPaper.subject}">
+                        <f:converter converterId="courseConverter"/>
+                        <f:selectItems value="#{dropboxesDataBean.subjects}"/>
+                    </h:selectOneMenu>
+                </div>
+            </div>
+
+            <p:fileUpload mode="simple" value="#{submitFinalPaper.file}"/>
+            <p:commandButton value="Submit" ajax="false" actionListener="#{submitFinalPaper.upload}"/>
+        </h:form>
+    </ui:define>
+</ui:composition>
