Sredjena validacija formi za studenta i zaposlenog kao i cuvanje istih u bazi

--- a/web/add-student.xhtml
+++ b/web/add-student.xhtml
@@ -13,59 +13,69 @@
     <ui:define name="content">
 
         <h:form styleClass="col-md-12 form-horizontal">
+           
+            <p:growl  life="3000" showDetail="true" />
             
-            <p:growl id="infoMessage" life="3000"/>
-            <p:growl id="errorMessage" life="3000"/>
             <div class="form-group">
                 <h:outputLabel for="nameInput" styleClass="col-md-2 control-label" value="Ime: "/>
                 <div class="col-md-10">
-                    <h:inputText id="nameInput" styleClass="form-control" value="#{studentBean.student.person.name}"/>
+                    <h:inputText id="nameInput" styleClass="form-control" value="#{studentBean.student.person.name}" 
+                                 required="true" requiredMessage="Morate uneti ime"/>
+                    <p:message for="nameInput" severity="error"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="surnameInput"  styleClass="col-md-2 control-label" value="Prezime: "/>
                 <div class="col-md-10">
-                    <h:inputText id="surnameInput" styleClass="form-control" value="#{studentBean.student.person.surname}"/>
+                    <h:inputText id="surnameInput" styleClass="form-control" value="#{studentBean.student.person.surname}"
+                                 required="true" requiredMessage="Morate uneti prezime"/>
+                    <p:message for="surnameInput" severity="error"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="indexNoInput"  styleClass="col-md-2 control-label" value="Broj indeksa: "/>
                 <div class="col-md-10">
-                    <h:inputText id="indexNoInput" styleClass="form-control" value="#{studentBean.student.indexNo}"/>
+                    <h:inputText id="indexNoInput" styleClass="form-control" value="#{studentBean.student.indexNo}" 
+                                 required="true" requiredMessage="Morate uneti broj indeksa"/>
+                    <p:message for="indexNoInput" severity="error"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="emailInput"  styleClass="col-md-2 control-label" value="e-mail: "/>
                 <div class="col-md-10">
-                    <h:inputText id="emailInput" styleClass="form-control" value="#{studentBean.student.person.email}" required="true"
+                    <p:inputText id="emailInput" styleClass="form-control" value="#{studentBean.student.person.email}" required="true" 
                                  requiredMessage="Morate uneti email" validator="#{studentBean.validateEmail}"/>
-                    <p:message for="emailInput" />
+                    <p:message for="emailInput" severity="error"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="usernameInput"  styleClass="col-md-2 control-label" value="Korisničko ime: "/>
                 <div class="col-md-10">
-                    <h:inputText id="usernameInput" styleClass="form-control" value="#{studentBean.student.person.username}" required="true"
-                                 requiredMessage="Morate uneti email" validator="#{studentBean.validateUsername}"/>
-                    <p:message for="usernameInput"/>
+                    <p:inputText id="usernameInput" styleClass="form-control" value="#{studentBean.student.person.username}" required="true" 
+                                 requiredMessage="Morate uneti username" validator="#{studentBean.validateUsername}"/>
+                    <p:message for="usernameInput" severity="error"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="passwordInput"  styleClass="col-md-2 control-label" value="Korisnička šifra: "/>
                 <div class="col-md-10">
-                    <h:inputText id="passwordInput" styleClass="form-control" value="#{studentBean.student.person.password}"/>
+                    <h:inputText id="passwordInput" styleClass="form-control" value="#{studentBean.student.person.password}"
+                                 required="true" requiredMessage="Morate uneti password"/>
+                    <p:message for="passwordInput"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <h:outputLabel for="jmbgInput"  styleClass="col-md-2 control-label" value="JMBG: "/>
                 <div class="col-md-10">
-                    <h:inputText id="jmbgInput" styleClass="form-control" value="#{studentBean.student.jmbg}"/>
+                    <h:inputText id="jmbgInput" styleClass="form-control" value="#{studentBean.student.jmbg}" required="true" 
+                                 requiredMessage="Morate uneti jmbg" validator="#{studentBean.validateJMBG}"/>
+                    <p:message for="jmbgInput"/>
                 </div>
             </div>
 
