--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,6 +5,14 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">  
     <ui:define name="title">Login</ui:define>
 
+    <ui:define name="heading">
+        <div style="margin-top: 110px;">
+            <h3>Pretraga radova</h3>
+            <p style="margin-top: 20px;">Omogućena vam je pretraga radova po različitim kriterijumima.</p>
+        </div>
+        <a href="search.jsf" class="btn btn-info pull-right" role="button">Pretraga radova</a>
+       
+    </ui:define>
 
     <ui:define name="content">
         <h:form styleClass="col-md-8 col-md-offset-4 form-horizontal" style="margin-top: 30px;">
