--- a/web/send-final-version.xhtml
+++ b/web/send-final-version.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/templates/main_template.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">  
-    <ui:define name="title">Send final version</ui:define>
+    <ui:define name="title">Slanje zavrsne verzije rada</ui:define>
 
     <ui:define name="content">
         <h:form enctype="multipart/form-data">
