--- a/web/thesis-request.xhtml
+++ b/web/thesis-request.xhtml
@@ -21,12 +21,12 @@
                     </h:selectOneMenu>
                 </div>
             </div>
-<!--Ovaj div je za sada nepotreban jer se subject vuce od profesora             <div class="form-group">
+<!--             <div class="form-group">
                 <h:outputLabel for="subject" styleClass="col-md-2 control-label" value="Predmet" />
                 <div class="col-md-10">
                     <h:selectOneMenu id="subject"  styleClass="form-control" value="#{dropboxesDataBean.subjects}">
                         <f:converter converterId="subjectConverter"/>
-                        <f:selectItems value=""/>
+                        <f:selectItems value="#{thesisRequestBean.work}"/>
                     </h:selectOneMenu>
                 </div>
             </div>-->
@@ -39,12 +39,11 @@
              <div class="form-group">
                 <h:outputLabel for="description" styleClass="col-md-2 control-label" value="Opis" />
                 <div class="col-md-10">
-                    <!--<h:inputText id="description" styleClass="form-control" value=""/>-->
-                    <h:inputTextarea id="description" styleClass="form-control" rows="10"/>
+                    <p:editor id="description" width="300" height="200" widgetVar="editor" value="#{thesisRequestBean.work.description}"/>
                     <h:outputText value="(do 500 karaktera)" styleClass="pull-right"/>
                 </div>
             </div>
-             <h:commandButton value="Pošalji" styleClass="btn btn-primary pull-right" action=""/>
+            <h:commandButton value="Pošalji" styleClass="btn btn-primary pull-right" action="#{thesisRequestBean.sendRequest}"/>
 
         </h:form>
     </ui:define>
