--- a/web/thesis-request.xhtml
+++ b/web/thesis-request.xhtml
@@ -21,7 +21,7 @@
                     </h:selectOneMenu>
                 </div>
             </div>
-<!--             <div class="form-group">
+            <div class="form-group">
                 <h:outputLabel for="subject" styleClass="col-md-2 control-label" value="Predmet" />
                 <div class="col-md-10">
                     <h:selectOneMenu id="subject"  styleClass="form-control" value="#{dropboxesDataBean.subjects}">
@@ -29,8 +29,8 @@
                         <f:selectItems value="#{thesisRequestBean.work}"/>
                     </h:selectOneMenu>
                 </div>
-            </div>-->
-             <div class="form-group">
+            </div>
+            <div class="form-group">
                 <h:outputLabel for="heading" styleClass="col-md-2 control-label" value="Naslov" />
                 <div class="col-md-10">
                     <h:inputText id="heading" styleClass="form-control" value="#{thesisRequestBean.work.title}"/>
