--- a/web/thesis-request.xhtml
+++ b/web/thesis-request.xhtml
@@ -24,9 +24,10 @@
             <div class="form-group">
                 <h:outputLabel for="subject" styleClass="col-md-2 control-label" value="Predmet" />
                 <div class="col-md-10">
+                    
                     <h:selectOneMenu id="subject"  styleClass="form-control" value="#{dropboxesDataBean.subjects}">
                         <f:converter converterId="subjectConverter"/>
-                        <f:selectItems value="#{thesisRequestBean.work}"/>
+                        <f:selectItems value="#{thesisRequestBean.work.subject}"/>
                     </h:selectOneMenu>
                 </div>
             </div>
@@ -39,7 +40,7 @@
              <div class="form-group">
                 <h:outputLabel for="description" styleClass="col-md-2 control-label" value="Opis" />
                 <div class="col-md-10">
-                    <p:editor id="description" width="300" height="200" widgetVar="editor" value="#{thesisRequestBean.work.description}"/>
+                    <p:editor id="description" width="300" widgetVar="editor" value="#{thesisRequestBean.work.description}"/>
                     <h:outputText value="(do 500 karaktera)" styleClass="pull-right"/>
                 </div>
             </div>
