--- a/web/all-theses.xhtml
+++ b/web/all-theses.xhtml
@@ -11,6 +11,9 @@
         <h3>
         <h:outputText value="doc. dr. Ime Prezime"  styleClass="col-md-offset-2" style="margin-bottom: 25px;"/> 
         </h3>
+         <h:form>
+        <h:commandButton value="Na čekanju" styleClass="btn btn-warning pull-left col-md-offset-2" action="d" /> 
+        </h:form>
     </ui:define>
 
     <ui:define name="content">
