--- a/web/all-theses.xhtml
+++ b/web/all-theses.xhtml
@@ -12,7 +12,8 @@
         <h:outputText value="doc. dr. Ime Prezime"  styleClass="col-md-offset-2" style="margin-bottom: 25px;"/> 
         </h3>
          <h:form>
-        <h:commandButton value="Na čekanju" styleClass="btn btn-warning pull-left col-md-offset-2" action="d" /> 
+        <h:commandButton value="Na čekanju" styleClass="btn btn-warning pull-left col-md-offset-2" action="d" />
+        <h:commandButton value="Za dodavanje komisije" styleClass="btn btn-info pull-left col-md-offset-2" action="d" /> 
         </h:form>
     </ui:define>
 
