--- a/web/all-theses.xhtml
+++ b/web/all-theses.xhtml
@@ -33,16 +33,16 @@
 
 
         <div class="col-md-12">
-            <ui:repeat value="#{bookCatalog.books}" var="book">
+            <ui:repeat value="#{thesesForEmployee.theses}" var="thesis">
                 <a href="#">
                      <div class="col-md-12" style="margin: 10px 0px; border-top: 1px solid #428bca; padding-left: 0px; padding-right: 0px;">
                         <p:graphicImage value="resources/images/pic.jpg" alt="Nema slike" styleClass="col-md-2" style="border: 1px solid; width: 100px; height: 100px;"/>
                         <div class="col-md-10 student-communication" style="height:100px">
                             <h4>
-                                <h:outputText value="NaslovNaslov NaslovNaslovNaslov NaslovNaslov NaslovNaslov Naslov NaslovNaslov Naslov Naslov Naslov Naslov Naslov"  styleClass="col-md-12"/> 
+                                <h:outputText value="#{thesis.title}"  styleClass="col-md-12"/> 
                             </h4>
-                            <h:outputText value="Ime Prezime" styleClass="col-md-4" style="margin-top: 10px; margin-right: 20px; display: inline-block;"/>
-                            <h:outputText value="Predmet" styleClass="col-md-4 pull-right text-right" style="margin-top: 10px; display: inline-block; padding-right: 0px; color: #b92c28"/>
+                            <h:outputText value="#{thesis.student.person.name} #{thesis.student.person.surname}" styleClass="col-md-4" style="margin-top: 10px; margin-right: 20px; display: inline-block;"/>
+                            <h:outputText value="#{thesis.subject.name}" styleClass="col-md-4 pull-right text-right" style="margin-top: 10px; display: inline-block; padding-right: 0px; color: #b92c28"/>
            
 
                         </div>
